# data_workers

./: .env.example  .gitignore  README.md  agents.md  prefect.yaml  pyproject.toml  requirements.txt  run_jobs.py
config/: _connection_config_template.json
core/data_hub/: connection_manager.py  data_connector.py
core/sql/: available_data.sql  sql_reader.py
core/util/: models.py  pandas.py
core/workers/: dummy_telegram.py  fx_scraper.py  pko_scraper.py
core/workers/base/: worker.py  worker_output.py
examples/: main.py  telegram_test_bot.py
