[project]
name = "data-workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "prefect>=3.6.24",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "ruff>=0.15.8",
    "sqlalchemy>=2.0.48",
    "ty>=0.0.26",
]
